--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pawan - My Portfolio</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
     <script src="https://kit.fontawesome.com/db866a78ac.js" crossorigin="anonymous"></script>
 </head>
 <body>
