--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Web Developer</span><br>Develop Websites</li>
-                            <li><span>Machine Learning</span><br>Creative A.I. using ML</li>
-                            <li><span>Data Scientist</span><br>Managing database</li>
+                            <li><span>App Development</span><br>Android applications</li>
+                            <li><span>Machine Learning</span><br>A.I. using ML</li>
                         </ul>
                     </div>
 
