--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>CSIT Student</p>
+                <p>Student</p>
                 <h1>Hey there,<br>I'm <span>Pawan </span>Kumar</h1>
             </div>
             <a href="Images/Pawan_Kumar_Resume.pdf" download class="btn btn2">Download CV</a>
@@ -81,17 +81,18 @@
                     <a href="#">Learn more</a>
                 </div>
                 <div>
+                    <i class="fa-regular fa-pen-to-square"></i></i>
+                    <h2>App Development</h2>
+                    <p>I specialize in creating high-performing, custom applications for the Android platform. My services include tailored app design, seamless API integration, and comprehensive testing to ensure a flawless user experience</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
                     <i class="fa-solid fa-photo-film"></i></i></i></i>
                     <h2>Video Editing</h2>
                     <p>I offer expert video editing services to enhance your footage with creative techniques. From promotional videos to personal projects, I deliver polished, engaging content that effectively communicates your message.</p>
                     <a href="#">Learn more</a>
                 </div>
-                <div>
-                    <i class="fa-regular fa-pen-to-square"></i></i>
-                    <h2>Script Writing</h2>
-                    <p>I specialize in script writing for various formats, including films, commercials, and online content. My focus is on crafting compelling narratives that resonate with your target audience and deliver a clear, impactful message.</p>
-                    <a href="#">Learn more</a>
-                </div>
+                
             </div>
         </div>
     </div>
