--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>Student</p>
                 <h1>Hey there,<br>I'm <span>Pawan </span>Kumar</h1>
             </div>
-            <a href="Images/Pawan_Kumar_Resume.pdf" download class="btn btn2">Download CV</a>
+            <a href="Images/RESUME_Pawan.pdf" download class="btn btn2">Download CV</a>
         </div>
     </div>
     <!-------------- about ------------->
