--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <a href="https://www.instagram.com/itspawan_04/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
                         <a href="https://www.linkedin.com/in/itspawan04/"><i class="fa-brands fa-linkedin" target="_blank"></i></a>
                     </div>
-                    <a href="Images/Pawan_Kumar_Resume.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Images/RESUME_Pawan.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
